--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -7,3 +7,12 @@
 p {
     color: #000;
 }
+
+.listItem__container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    
+}
