--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+
+.title {
+    text-align: center;
+    font-size: 4rem;
+    border: 2px solid #254;
+    margin: 150px 200px 0;
+    border-radius: 2rem;
+    background-color: aqua;
+}
