--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -7,3 +7,9 @@
     border-radius: 2rem;
     background-color: aqua;
 }
+
+.title:hover {
+    background-color: #254;
+    color: aqua;
+    border: 2px solid aqua;
+}
