--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -1,11 +1,18 @@
 .case {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding-bottom: 5px;
+    margin: 0 15px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
+    width: 250px;
 }
 
 img{
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    margin-bottom: 10px;
 }
