--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -9,9 +9,11 @@ p {
 }
 .listItem__container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
-    padding: 15px;
+    padding: 15px 30px;
+    margin: 0 15px;
+    gap: 20px;
     
 }
