--- a/src/components/CartWidget/cartWidget.css
+++ b/src/components/CartWidget/cartWidget.css
@@ -2,8 +2,8 @@
     font-size: 30px;
 }
 .number {
-    position: absolute;
-    top: 15px;
+    /* position: absolute;
+    top: 0px; */
     padding: 2px 6px;
     border-radius: 50%;
     background: #fff;
