--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,9 +1,28 @@
-.title {
+
+.cart-cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+    gap: 15px;
+}
+.text-cart {
+    font-size: 2.5rem;
+}
+.btn-cart {
+    font-size: 2rem;
+    border-radius: 10px;
+    padding: 3px 10px;
+    cursor: pointer;
+    background-color: #454545;
+    color: #fff;
+}
+.btn-cart:hover {
+    border: #454545 solid 2px;
+    background-color: #fff;
+    color: #454545;
+}
+.price {
     text-align: center;
-    font-size: 4rem;
-    border: 2px solid #254;
-    margin: 100px 200px 0;
-    padding: 50px 30px;
-    border-radius: 2rem;
-    background-color: aqua;
 }
