--- a/src/components/CartItem/cartItem.css
+++ b/src/components/CartItem/cartItem.css
@@ -1,11 +1,27 @@
 .itemcart {
     display: flex;
-    border-bottom: 1px solid #58a0b4;
-    max-width: 500px;
+    border-bottom: 2px solid #58a0b4;
+    max-width: 900px;
     margin: 15px auto;
 }
 
 .itemcart img{
-    width: 200px;
+    width: 130px;
     margin-right: 15px;
+    border-radius: 10px;
+}
+.content-ic {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    font-weight: 600;
+}
+.content-ic button {
+    border: none;
+}
+
+.content-ic i {
+    font-size: 1.8rem;
+    cursor: pointer;
 }
