--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 5px;
-    margin: 0 15px;
+    margin: 20px;
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
     width: 250px;
@@ -15,4 +15,22 @@ img{
     object-fit: cover;
     border-radius: 20px 20px 0px 0px;
     margin-bottom: 10px;
+}
+.title-it {
+    color: #000;
+    text-align: center;
+    margin-bottom: 7px;
+}
+.text-it {
+    text-align: center;
+    font-size: 1.1rem;
+    color: #000;
+    font-weight: 600;
+}
+.boton-it {
+    width: 200px;
+    border-radius: 10px;
+    padding: 5px 0;
+    cursor: pointer;
+    margin: 8px 0;
 }
