--- a/src/components/ItemDetail/itemDetail.css
+++ b/src/components/ItemDetail/itemDetail.css
@@ -8,50 +8,37 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    background-color: #ffffff;
+    background-color: #d1d0d0;
     padding: 30px;
     width: 700px;
     height: 500px;
     border-radius: 20px;
+    gap: 20px;
 }
 .detail__img {
     width: 50%;
     object-fit: cover;
     border-radius: 20px;
 }
-/* .container {
-    width: 98%;
-    margin: auto;
-  }
-  
-  @media screen and (min-width:768px) {
-    .container {
-        width: 70%;
-    }
-  }
-  
-.detail {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .detail__img {
-    width: 100%;
-  }
-  
-  .content {
-    width: 100%;
-  }
-  
-  @media screen and (min-width:768px) {
-    .detail__img {
-        width: 50%;
-    }
-    .content {
-        padding-left: 3rem;
-        width: 50%;
-    }
-  } */
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 55px;
+}
+.title-detail {
+  text-align: center;
+}
+.boton-detail {
+  border-radius: 10px;
+  margin-top: 10px;
+  padding: 5px 9px;
+  width: 250px;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+.boton-detail:hover {
+  background-color: #454545;
+  color: #fff;
+  border: #fff solid 2px;
+}
