--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -1,19 +1,11 @@
-.item__container h1 {
-    text-align: center;
-    font-size: 4rem;
-    padding: 25px;
-}
 
-p {
-    color: #000;
-}
 .listItem__container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
     padding: 15px 30px;
-    margin: 0 15px;
+    margin: 20px 15px;
     gap: 20px;
     
 }
