--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -3,6 +3,68 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 5px;
+    margin: 10px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
+    width: 200px;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    margin-bottom: 10px;
+}
+.title-it {
+    color: #000;
+    text-align: center;
+    margin-bottom: 7px;
+}
+.text-it {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #000;
+    font-weight: 400;
+}
+.boton-it {
+    width: 150px;
+    border-radius: 10px;
+    padding: 5px 0;
+    cursor: pointer;
+    margin: 8px 0;
+}
+@media (min-width: 768px) {
+    .case {
+        width: 200px;
+    }
+}
+@media (min-width: 1024px) {
+    .case {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 5px;
+        margin: 20px;
+        border-radius: 20px;
+        box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
+        width: 250px;
+    }
+    .text-it {
+        font-size: 1.1rem;
+        font-weight: 600;
+    }
+    .boton-it {
+        width: 200px;
+    }
+}
+
+/* 
+.case {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 5px;
     margin: 20px;
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
@@ -33,4 +95,4 @@ img{
     padding: 5px 0;
     cursor: pointer;
     margin: 8px 0;
-}
+} */
