--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -1,11 +1,22 @@
 
 .listItem__container{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
     padding: 15px 30px;
-    margin: 20px 15px;
-    gap: 20px;
-    
+    margin: 10px;
+    gap: 5px;
+}
+@media (min-width: 768px) {
+    .listItem__container{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+    }
+}
+@media (min-width: 1024px) {
+    .listItem__container{
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+    }
 }
