--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding-bottom: 5px;
     margin: 10px;
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
-    width: 200px;
+    width: 300px;
 }
 
 img{
@@ -28,7 +29,7 @@ img{
     font-weight: 400;
 }
 .boton-it {
-    width: 150px;
+    width: 250px;
     border-radius: 10px;
     padding: 5px 0;
     cursor: pointer;
@@ -37,6 +38,9 @@ img{
 @media (min-width: 768px) {
     .case {
         width: 200px;
+    }
+    .boton-it {
+        width: 150px;
     }
 }
 @media (min-width: 1024px) {
