--- a/src/components/ItemCount/itemCount.css
+++ b/src/components/ItemCount/itemCount.css
@@ -1,12 +1,12 @@
 .counter {
-    width: 300px;
+    width: 250px;
     background-color: #747373;
     margin: auto;
     padding: 10px;
     text-align: center;
     color: #000;
     border-radius: 20px;
-    font-size: 1.2rem;
+    font-size: 1.05rem;
 }
 .boton {
     border-radius: 50%;
@@ -19,7 +19,7 @@
     border-radius: 10px;
     margin-top: 10px;
     padding: 5px 9px;
-    width: 250px;
+    width: 200px;
     border: none;
     cursor: pointer;
 }
@@ -27,4 +27,14 @@
     background-color: #454545;
     border: #fff solid 2px;
     color: #fff;
+}
+@media (min-width: 768px) {
+    .counter {
+        width: 270px;
+        font-size: 1.1rem;
+    }
+    .boton-ag {
+        width: 220px;
+    }
+
 }
