--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -1,9 +1,9 @@
 
 .listItem__container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
+    grid-template-columns: repeat(1, auto);
     align-items: center;
+    justify-content: center;
     padding: 15px 30px;
     margin: 10px;
     gap: 5px;
