--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -4,9 +4,9 @@
     grid-template-columns: repeat(1, auto);
     align-items: center;
     justify-content: center;
-    padding: 15px 30px;
-    margin: 10px;
+    padding: 25px 40px;
     gap: 5px;
+    background-color: #cfcece;
 }
 @media (min-width: 768px) {
     .listItem__container{
