--- a/src/components/CartWidget/cartWidget.css
+++ b/src/components/CartWidget/cartWidget.css
@@ -1,5 +1,12 @@
 
 .number {
+  top: 20px;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 600;
+}
+@media (min-width: 1024px) {
+  .number {
     position: absolute;
     top: 20px;
     border-radius: 50%;
@@ -7,3 +14,4 @@
     font-size: 1rem;
     font-weight: 600;
   }
+}
