--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -8,6 +8,7 @@
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(38, 70, 83, .5);
     width: 300px;
+    background-color: #e6e6e6;
 }
 
 img{
@@ -34,6 +35,7 @@ img{
     padding: 5px 0;
     cursor: pointer;
     margin: 8px 0;
+    background-color: #fff;
 }
 @media (min-width: 768px) {
     .case {
